--- a/App.config
+++ b/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="VpdbAgent.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <VpdbAgent.Properties.Settings>
+            <setting name="ApiKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AuthUser" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AuthPass" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Endpoint" serializeAs="String">
+                <value>https://staging.vpdb.io</value>
+            </setting>
+        </VpdbAgent.Properties.Settings>
+    </userSettings>
 </configuration>
