--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -73,7 +73,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="PinballX\MenuManager.cs" />
+    <Compile Include="PinballX\Models\Game.cs" />
+    <Compile Include="PinballX\Models\Menu.cs" />
     <Compile Include="RefitStubs.cs" />
+    <Compile Include="Settings\SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ReleaseTemplate.xaml.cs">
+      <DependentUpon>ReleaseTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Vpdb\Models\Author.cs" />
     <Compile Include="Vpdb\Models\File.cs" />
     <Compile Include="Vpdb\Models\Flavor.cs" />
@@ -81,9 +90,11 @@
     <Compile Include="Vpdb\Models\Image.cs" />
     <Compile Include="Vpdb\Models\User.cs" />
     <Compile Include="Vpdb\Models\Version.cs" />
+    <Compile Include="Vpdb\Network\AuthenticatedHttpClientHandler.cs" />
     <Compile Include="Vpdb\Network\SnakeCasePropertyNamesContractResolver.cs" />
     <Compile Include="Vpdb\VpdbApi.cs" />
     <Compile Include="Vpdb\Models\Release.cs" />
+    <Compile Include="Vpdb\VpdbClient.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,6 +107,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Settings\SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ReleaseTemplate.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -125,6 +144,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\refit.2.3.0\build\refit.targets" Condition="Exists('packages\refit.2.3.0\build\refit.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
