Added PBX/Hyperpin folder setting.

--- a/App.config
+++ b/App.config
@@ -22,6 +22,9 @@
             <setting name="Endpoint" serializeAs="String">
                 <value>https://staging.vpdb.io</value>
             </setting>
+            <setting name="PbxFolder" serializeAs="String">
+                <value />
+            </setting>
         </VpdbAgent.Properties.Settings>
     </userSettings>
 </configuration>
