--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="Endpoint" Type="(Web Service URL)" Scope="User">
       <Value Profile="(Default)">https://staging.vpdb.io</Value>
     </Setting>
+    <Setting Name="PbxFolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
