--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net452" />
   <package id="refit" version="2.3.0" targetFramework="net452" />
