--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -89,6 +89,9 @@
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\GameTemplate.xaml.cs">
+      <DependentUpon>GameTemplate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ReleaseTemplate.xaml.cs">
       <DependentUpon>ReleaseTemplate.xaml</DependentUpon>
     </Compile>
@@ -137,6 +140,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\Buttons.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GameTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
