--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,8 @@
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net452" />
+  <package id="NLog" version="4.1.2" targetFramework="net452" />
+  <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.0.1" targetFramework="net452" />
   <package id="refit" version="2.3.0" targetFramework="net452" />
 </packages>
