--- a/packages.config
+++ b/packages.config
@@ -6,5 +6,6 @@
   <package id="NLog" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.0.1" targetFramework="net452" />
+  <package id="OLinq" version="0.2.0" targetFramework="net452" />
   <package id="refit" version="2.3.0" targetFramework="net452" />
 </packages>
