--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -74,6 +74,10 @@
       <HintPath>packages\NLog.4.1.2\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="OLinq, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\OLinq.0.2.0\lib\net45\OLinq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Refit, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\refit.2.3.0\lib\Net45\Refit.dll</HintPath>
       <Private>True</Private>
