Added base for lazy notifying observer collection.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -107,6 +107,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\LazyObservableCollection.cs" />
     <Compile Include="GameManager.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Platform.cs" />
