Refactored watch events.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="PinballX\FileWatcher.cs" />
     <Compile Include="PinballX\MenuManager.cs" />
+    <Compile Include="Models\Database.cs" />
     <Compile Include="PinballX\Models\Game.cs" />
     <Compile Include="PinballX\Models\Menu.cs" />
     <Compile Include="PinballX\PinballXSystem.cs" />
