--- a/packages.config
+++ b/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="ini-parser" version="2.2.2" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NLog" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.0.1" targetFramework="net452" />
-  <package id="OLinq" version="0.2.0" targetFramework="net452" />
+  <package id="PusherClient" version="0.3.0" targetFramework="net452" />
   <package id="refit" version="2.3.0" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
 </packages>
