--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -113,6 +113,7 @@
     </ApplicationDefinition>
     <Compile Include="Common\ImageUtils.cs" />
     <Compile Include="Common\LazyObservableList.cs" />
+    <Compile Include="Controls\IndeterminateProgress.cs" />
     <Compile Include="Controls\ReleaseIdentifyResultsTemplate.xaml.cs">
       <DependentUpon>ReleaseIdentifyResultsTemplate.xaml</DependentUpon>
     </Compile>
