Icons are now managed as properly as it gets...

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -113,7 +113,7 @@
     </ApplicationDefinition>
     <Compile Include="Common\ImageUtils.cs" />
     <Compile Include="Common\LazyObservableList.cs" />
-    <Compile Include="Common\Size2ScaleConverter.cs" />
+    <Compile Include="Controls\IconControl.cs" />
     <Compile Include="Controls\IndeterminateProgress.cs" />
     <Compile Include="Controls\ReleaseIdentifyResultsTemplate.xaml.cs">
       <DependentUpon>ReleaseIdentifyResultsTemplate.xaml</DependentUpon>
