Added icon for settings.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -187,6 +187,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Resources\Icons\settings.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Resources\Icons\vpdb.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
