--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,15 @@
   <package id="NLog.Config" version="4.1.2" targetFramework="net452" />
   <package id="NLog.Schema" version="4.0.1" targetFramework="net452" />
   <package id="PusherClient" version="0.3.0" targetFramework="net452" />
+  <package id="reactiveui" version="6.5.0" targetFramework="net452" />
+  <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
   <package id="refit" version="2.3.0" targetFramework="net452" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.13.1" targetFramework="net452" />
 </packages>
