--- a/NLog.config
+++ b/NLog.config
@@ -14,14 +14,13 @@
         -->
 
         <target name="console" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
-             layout="${longdate} ${pad:padding=5:inner=${level:uppercase=true}} ${logger} | ${message} ${exception:format=ToString}" >
+             layout="[${threadid}] ${date} ${pad:padding=5:inner=${level:uppercase=true}} ${logger} | ${message} ${exception:format=ToString}" >
                 <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
                 <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
                 <highlight-row condition="level == LogLevel.Error" foregroundColor="Blue" />
                 <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
-
         </target>
     </targets>
 
