--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -152,6 +152,8 @@
     <Compile Include="GameManager.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Platform.cs" />
+    <Compile Include="Pages\BasePage.cs" />
+    <Compile Include="Pages\IReactiveView.cs" />
     <Compile Include="Pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
