--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Common\FilesystemWatchCache.cs" />
     <Compile Include="Common\ImageUtils.cs" />
     <Compile Include="Common\LazyObservableList.cs" />
+    <Compile Include="Common\TransitioningContentControl.cs" />
     <Compile Include="Controls\IconControl.cs" />
     <Compile Include="Controls\IndeterminateProgress.cs" />
     <Compile Include="Controls\ReleaseIdentifyResultsTemplate.xaml.cs">
