--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -182,7 +182,7 @@
     <Compile Include="Vpdb\Models\Version.cs" />
     <Compile Include="Vpdb\Network\AuthenticatedHttpClientHandler.cs" />
     <Compile Include="Vpdb\Network\SnakeCasePropertyNamesContractResolver.cs" />
-    <Compile Include="Vpdb\VpdbApi.cs" />
+    <Compile Include="Vpdb\IVpdbApi.cs" />
     <Compile Include="Vpdb\Models\Release.cs" />
     <Compile Include="Vpdb\VpdbClient.cs" />
     <Page Include="Controls\ReleaseIdentifyResultsTemplate.xaml">
