--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -178,9 +178,12 @@
     <Compile Include="Vpdb\Models\Flavor.cs" />
     <Compile Include="Vpdb\Models\Game.cs" />
     <Compile Include="Vpdb\Models\Image.cs" />
+    <Compile Include="Vpdb\Models\Messages\RegisterRequest.cs" />
+    <Compile Include="Vpdb\Models\Messages\RegisterResponse.cs" />
     <Compile Include="Vpdb\Models\User.cs" />
     <Compile Include="Vpdb\Models\Version.cs" />
     <Compile Include="Vpdb\Network\AuthenticatedHttpClientHandler.cs" />
+    <Compile Include="Vpdb\Network\PusherAuthorizer.cs" />
     <Compile Include="Vpdb\Network\SnakeCasePropertyNamesContractResolver.cs" />
     <Compile Include="Vpdb\IVpdbApi.cs" />
     <Compile Include="Vpdb\Models\Release.cs" />
@@ -310,6 +313,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\refit.2.3.0\build\refit.targets" Condition="Exists('packages\refit.2.3.0\build\refit.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
