--- a/NLog.config
+++ b/NLog.config
@@ -14,7 +14,7 @@
         -->
 
         <target name="console" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="false"
-             layout="[${threadid}] ${date} ${pad:padding=5:inner=${level:uppercase=true}} ${logger} | ${message} ${exception:format=ToString}" >
+             layout="[${threadid}] ${date} ${pad:padding=5:inner=${level:uppercase=true}} | ${message} ${exception:format=ToString}" >
                 <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
                 <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
