--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -62,6 +62,10 @@
       <HintPath>packages\ini-parser.2.2.2\lib\net20\INIFileParser.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LoadingIndicators.WPF, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\LoadingIndicators.WPF.0.0.1\lib\LoadingIndicators.WPF.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MahApps.Metro, Version=1.1.2.0, Culture=neutral, PublicKeyToken=f4fb5a3c4d1e5b4f, processorArchitecture=MSIL">
       <HintPath>packages\MahApps.Metro.1.1.2.0\lib\net45\MahApps.Metro.dll</HintPath>
       <Private>True</Private>
@@ -143,7 +147,6 @@
     </ApplicationDefinition>
     <Compile Include="Common\FilesystemWatchCache.cs" />
     <Compile Include="Controls\IconControl.cs" />
-    <Compile Include="Controls\IndeterminateProgress.cs" />
     <Compile Include="SmoothPanel\DataBindHelper.cs" />
     <Compile Include="SmoothPanel\IHeightMeasurer.cs" />
     <Compile Include="SmoothPanel\SmoothPanel.cs" />
