Window placement is now saved and restored on next run.

--- a/App.config
+++ b/App.config
@@ -25,6 +25,21 @@
             <setting name="PbxFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="WindowTop" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="WindowLeft" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="WindowHeight" serializeAs="String">
+                <value>700</value>
+            </setting>
+            <setting name="WindowWidth" serializeAs="String">
+                <value>900</value>
+            </setting>
+            <setting name="WindowMax" serializeAs="String">
+                <value>False</value>
+            </setting>
         </VpdbAgent.Properties.Settings>
     </userSettings>
   <runtime>
