Moved SmoothPanel to Libs folder.

--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -148,13 +148,21 @@
     <Compile Include="Common\FilesystemWatchCache.cs" />
     <Compile Include="Common\ObservableTrace.cs" />
     <Compile Include="Controls\IconControl.cs" />
-    <Compile Include="SmoothPanel\DataBindHelper.cs" />
-    <Compile Include="SmoothPanel\IHeightMeasurer.cs" />
-    <Compile Include="SmoothPanel\SmoothPanel.cs" />
-    <Compile Include="SmoothPanel\SmoothPanelChildren.cs" />
-    <Compile Include="SmoothPanel\SmoothPanelMeasurer.cs" />
-    <Compile Include="SmoothPanel\SmoothPanelTemplate.cs" />
-    <Compile Include="SmoothPanel\SmoothPanelViewCache.cs" />
+    <Compile Include="Libs\DelayBinding\BindingBaseExtensionBase.cs" />
+    <Compile Include="Libs\DelayBinding\BindingExtensionBase.cs" />
+    <Compile Include="Libs\DelayBinding\DelayBinding\DelayBindingController.cs" />
+    <Compile Include="Libs\DelayBinding\DelayBinding\DelayBindingExtension.cs" />
+    <Compile Include="Libs\DelayBinding\DelayBinding\DelayBindingManager.cs" />
+    <Compile Include="Libs\DelayBinding\DelayBinding\DelayBindingOperations.cs" />
+    <Compile Include="Libs\DelayBinding\DelayBinding\DelayMultiBindingExtension.cs" />
+    <Compile Include="Libs\DelayBinding\MultiBindingExtensionBase.cs" />
+    <Compile Include="Libs\SmoothPanel\DataBindHelper.cs" />
+    <Compile Include="Libs\SmoothPanel\IHeightMeasurer.cs" />
+    <Compile Include="Libs\SmoothPanel\SmoothPanel.cs" />
+    <Compile Include="Libs\SmoothPanel\SmoothPanelChildren.cs" />
+    <Compile Include="Libs\SmoothPanel\SmoothPanelMeasurer.cs" />
+    <Compile Include="Libs\SmoothPanel\SmoothPanelTemplate.cs" />
+    <Compile Include="Libs\SmoothPanel\SmoothPanelViewCache.cs" />
     <Compile Include="ViewModels\MainReleaseResultsItemViewModel.cs" />
     <Compile Include="ViewModels\MainReleaseResultsViewModel.cs" />
     <Compile Include="ViewModels\TypeConverters\BooleanConverter.cs" />
