--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Libs\SmoothPanel\SmoothPanelMeasurer.cs" />
     <Compile Include="Libs\SmoothPanel\SmoothPanelTemplate.cs" />
     <Compile Include="Libs\SmoothPanel\SmoothPanelViewCache.cs" />
+    <Compile Include="Models\GlobalDatabase.cs" />
     <Compile Include="ViewModels\MainReleaseResultsItemViewModel.cs" />
     <Compile Include="ViewModels\MainReleaseResultsViewModel.cs" />
     <Compile Include="ViewModels\TypeConverters\BooleanConverter.cs" />
@@ -180,7 +181,7 @@
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="PinballX\FileSystemWatcher.cs" />
     <Compile Include="PinballX\MenuManager.cs" />
-    <Compile Include="Models\Database.cs" />
+    <Compile Include="Models\PlatformDatabase.cs" />
     <Compile Include="PinballX\Models\Game.cs" />
     <Compile Include="PinballX\Models\Menu.cs" />
     <Compile Include="PinballX\Models\PinballXSystem.cs" />
