--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Vpdb\IVpdbApi.cs" />
     <Compile Include="Vpdb\Models\Release.cs" />
     <Compile Include="Vpdb\VpdbClient.cs" />
+    <Page Include="Styles\Scrollbars.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\MainReleaseResultsItemView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
