--- a/vpdb-agent.csproj
+++ b/vpdb-agent.csproj
@@ -156,12 +156,16 @@
     <Compile Include="Libs\SmoothPanel\SmoothPanelTemplate.cs" />
     <Compile Include="Libs\SmoothPanel\SmoothPanelViewCache.cs" />
     <Compile Include="Models\GlobalDatabase.cs" />
+    <Compile Include="ViewModels\Downloads\DownloadsViewModel.cs" />
     <Compile Include="ViewModels\Games\GameItemResultsItemViewModel.cs" />
     <Compile Include="ViewModels\Games\GameItemResultsViewModel.cs" />
     <Compile Include="Common\TypeConverters\BooleanConverter.cs" />
     <Compile Include="Common\TypeConverters\BooleanToBrushConverter.cs" />
     <Compile Include="Common\TypeConverters\BooleanToVisibilityConverter.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\Downloads\DownloadsView.xaml.cs">
+      <DependentUpon>DownloadsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Games\GameItemResultsItemView.xaml.cs">
       <DependentUpon>GameItemResultsItemView.xaml</DependentUpon>
     </Compile>
@@ -217,6 +221,10 @@
     <Page Include="Styles\Scrollbars.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Downloads\DownloadsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Games\GameItemResultsItemView.xaml">
       <SubType>Designer</SubType>
@@ -353,8 +361,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\Fonts\" />
-    <Folder Include="ViewModels\Downloads\" />
-    <Folder Include="Views\Downloads\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\refit.2.3.0\build\refit.targets" Condition="Exists('packages\refit.2.3.0\build\refit.targets')" />
